# ellington

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  NOTES.md  README.md  appveyor.yml  build.rs  tst.el
data/flac/: At A Georgia Camp Meeting - Pete Daily's Dixieland Band.flac  At The Jazz Band Ball - Sextette From Hunger.flac  Bugle Call Rag - Metronome All Star Band.flac  Bugle Call Rag - Teddy Wilson Quintet - Schoebel.flac  Countless Blues - The Kansas City Six - Eddie Druham.flac  Crazy Rhythm - Coleman Hawkins and his All-Star Jam Band.flac  Do You Wanna Jump, Children? - Count Basie And His Orchestra.flac  Doctor Jazz - Oliver - Al Jenkins - Johnny McDonald.flac  Hoodle Addle - Tex Beneke with The Miller Orchestra.flac  I Let A Song Go Out of My Heart - Ellington.flac  Jazz Me Blues - George Hartman and his Orchestra.flac  Jumpin' at the Woodside - Count Basie And His Orchestra.flac  Milenberg Joys - The 6-Alarm Six - Rappolo.flac  Rag Mop - Johnnie Lee Wills and His Boys.flac  School Days - Dizzy Gillespie - Joe Carroll.flac  Song of The Volga Boatman - Ray Brown Trio.flac  The Devil Ain't Lazy - Bob Wills and his Texas Playboys.flac  The Little Man Who Wasn't - Glenn Miller and his Orchestra.flac  When The Saints Go Marching In - Pete Daily's Dixieland Band.flac
libellington/: Cargo.toml  build.rs
libellington/src/: lib.rs
libellington/src/analysers/: bpmtools.rs  mod.rs
libellington/src/input/: audiobuffer.rs
res/: partialLibrary.xml  taggedLibrary.xml
resources/test/data/flac/: 09 - Jumpin' at the Woodside - Count Basie And His Orchestra.flac  Countless Blues - The Kansas City Six - Eddie Druham.flac  Milenberg Joys - The 6-Alarm Six - Rappolo.flac
resources/test/data/lib/: library.json
resources/test/gold/: empty.json  fresh_library.json
scratch/: old_stuff.rs
scripts/: convert_and_compare.sh  find_dlls.rs  metaq.sh  package.rs  package.sh  prequery_directory.sh  rmetaq.sh  travis_package.sh
scripts/applescripts/: wrapper.sh
scripts/applescripts/itunes/: write_to_comments.applescript  write_to_comments.scpt
scripts/applescripts/swinsian/: write_to_comments.applescript  write_to_comments.scpt
src/: audio_in.rs  cli.yml  comment_data.rs  ellington.rs  lib.rs  main.rs  profiling.rs  soxcall.rs  track.rs
src/actions/: mod.rs
src/analysers/: analyser.rs  bpmtools.rs  mod.rs
src/estimators/: mod.rs
src/estimators/algorithms/: mod.rs  naive.rs
src/estimators/sources/: audiobuffer.rs  audiostream.rs
src/input/: audiobuffer.rs  audiostream.rs  mod.rs  reader.rs
src/itunes/: library.rs  mod.rs  track.rs
src/pipelines/: mod.rs
src/pipelines/algorithms/: mod.rs  naive.rs
src/shelltools/: bellson.rs  bpm.rs  ffmpeg.rs  generic.rs  id3v2.rs  mod.rs  pipe.rs  sox.rs
src/shelltools/metadata/: id3v2.rs  mod.rs  mp4tools.rs
src/types/: mod.rs
testdata/lib/: library.json
tests/: lib.rs
