[package]
name = "ellington"
version = "0.2.14"
authors = ["Adam Harries <harries.adam@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
description = "An experimental testbed and set of tools for the automatic tempo estimation of swing music"


[lib]
name = "libellington"
path = "src/lib.rs"

[dependencies]
plist = "0.2"
histogram = "0.6.9"
byteorder = "1"
clap = {version = "2.31.2", features = ["yaml"]}
rand = "0.5.2"
url = "1.7.0"
percent-encoding = "1.0.1"
serde = "1.0.66"
serde_derive= "1.0.66"
serde_json = "1.0"
regex = "1.0.1"
lazy_static = "1.0.1"
walkdir = "2"
log = "0.4"
env_logger  = "0.5.1"
commandspec = "0.10"
nom = "4.0.0"
talamel = { git = "https://github.com/AdamHarries/talamel.git" }

[build-dependencies]
commandspec = "0.10"

[features]
# This will download lots of data! 
data_driven_tests = []
extended_tests = []

[package.metadata.deb]
section = "sound"
depends = "libgcc1 (>= 1:4), libc6 (>= 2.19), libtag1v5, ffmpeg"
extended-description = """\
An experimental tool for automatically calculating the BPM of audio files \
in a library of (mostly) swing music, as well as a testbed for trying out new
BPM algorithms and techniques for the above."""
